--- a/css/universal.css
+++ b/css/universal.css
@@ -60,8 +60,9 @@ a {
 
 #business-logo {
     width: calc(100% - 10vh);
-    height: 100%;
+    height: 80%;
     object-fit: contain;
+    margin: auto;
 }
 
 #sidebar-menu {
